--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,27 @@
 }
 
 body{
-        
+        background: white;
 }
+
+/* li{
+    list-style: none;
+    cursor: pointer;
+    position: relative;
+} */
+
+/* li:hover::before{
+    position: absolute;
+    content: '';
+    height: 4px;
+    width: 100%;
+    background: #2a68ff;
+    right: 0;
+    color: #2a68ff;
+}
+.icon{
+    cursor: pointer;
+}
+.card{
+    color: black;
+} */
