--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 @tailwind base;
 @tailwind components;
-@tailwind utitlities;
+@tailwind utilities;
 
  :root{
     font-family: 'Poppins', sans-serif;
@@ -12,22 +12,23 @@ body{
         background: white;
 }
 
-/* li{
+li{
     list-style: none;
     cursor: pointer;
     position: relative;
-} */
+}
 
-/* li:hover::before{
+li:hover::before{
     position: absolute;
     content: '';
     height: 4px;
     width: 100%;
     background: #2a68ff;
     right: 0;
+    bottom: -10px;
     color: #2a68ff;
 }
-.icon{
+/* .icon{
     cursor: pointer;
 }
 .card{
